<resources>
    <string name="app_name">Best Slopes</string>
    <string name="start_activity_text">Start Activity</string>
    <string name="edit_trail_name_hint">Trail Name</string>
    <string name="edit_difficulty_text">Please select a difficulty</string>
    <string name="edit_description_hint">Comments…</string>
    <string name="edit_add_image">Add Image</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>

    <string name="menu_server_stats">Server Statistics</string>
    <string name="menu_about">About</string>
    <string name="menu_deleteDB">Delete All Trails</string>
    <string name="menu_sort_by">Sort By</string>
    <string name="menu_backup_trails">Backup Trails To Cloud</string>

    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->

    <!-- Strings related to ViewTrailActivity -->
    <string name="comments">Comments</string>
    <string name="images">Images</string>
    <string name="add_comment">Add comment…</string>
    <string name="image_button_description">Add comment button</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>


    <string name="serverStatistics">Server Statistics</string>
    <string name="pastHour">Active trails in past Hour:</string>
    <string name="pastDay">Active trails in past Day:</string>
    <string name="pastWeek">Active trails in past Week:</string>
    <string name="pastTotal">Active trails in Total:</string>
    <string name="past0">0</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_save">Save</string>
    <string name="title_activity_test_list_database">TestListDatabase</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_login">Log in/Register</string>
    <string name="login_success">Successfully logged in!</string>
    <string name="register_success">Welcome! Successfully registered.</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_username_already_taken">Username already in use!</string>
    <string name="menu_logout">Logout</string>
    <string name="logout_success">You have been successfully logged out.</string>

</resources>
