<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".EditTrailActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_trail_name_hint"
        android:id="@+id/edit_trail_name"
        android:inputType="text|textCapWords|textAutoCorrect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_difficulty_text"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_easy"
            android:textOn=""
            android:textOff=""
            android:checked="true"
            android:onClick="difficultyChanged" />

        <ToggleButton
            android:id="@+id/toggle_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_medium"
            android:textOn=""
            android:textOff=""
            android:onClick="difficultyChanged" />

        <ToggleButton
            android:id="@+id/toggle_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_difficult"
            android:textOn=""
            android:textOff=""
            android:onClick="difficultyChanged" />

        <ToggleButton
            android:id="@+id/toggle_extremely_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_extremely_difficult"
            android:textOn=""
            android:textOff=""
            android:onClick="difficultyChanged" />
    </LinearLayout>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/edit_rating"
        android:isIndicator="true"
        android:max = "5"
        android:numStars="5"
        android:stepSize="0.01" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/commentsLayout"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/grid_view_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/comments"
            android:textColor="@android:color/black"
            android:id="@+id/commentsTitleText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/commentsListView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/grid_view_background"
    android:textColor="@android:color/transparent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/images"
        android:textColor="@android:color/black"
        android:id="@+id/imagesTitleText" />

    <GridView
        android:id="@+id/imageGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:stretchMode="columnWidth"
        android:gravity="center" />
</LinearLayout>


</LinearLayout>
